# pdf-generation-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  settings.py
src/exceptions/: __init__.py
src/firebase/: __init__.py
src/firebase/firestore/: __init__.py
src/firebase/storage/: bucket.py  image_object.py
src/middlewares/: auth.py
src/routes/: calibration.py  reports.py
src/utils/: convert_bytes_to_megabytes.py  copy_var.py  file.py  get_varname.py  logger.py
